--- a/index.html
+++ b/index.html
@@ -413,20 +413,20 @@
          <div class="row">
             <div class="col-md-4 mb-3 mb-md-0">
                <h5 style="font-weight:700; letter-spacing:1px;">Contact</h5>
-               <ul class="list-unstyled" style="margin-top: 15px;">
-                  <li style="margin-bottom:10px;">
+                  <ul class="list-unstyled" style="margin-top: 15px;">
+                   <li style="margin-bottom:10px;">
                      <i class="fa fa-map-marker" aria-hidden="true" style="color:#ffd700; margin-right:8px;"></i>
-                     Nairobi, Kenya
-                  </li>
-                  <li style="margin-bottom:10px;">
+                     123 Main Street, New York, NY, USA
+                   </li>
+                   <li style="margin-bottom:10px;">
                      <i class="fa fa-phone" aria-hidden="true" style="color:#ffd700; margin-right:8px;"></i>
-                     +254 700 000 000
-                  </li>
-                  <li>
+                     +1 (555) 123-4567
+                   </li>
+                   <li>
                      <i class="fa fa-envelope" aria-hidden="true" style="color:#ffd700; margin-right:8px;"></i>
                      info@primewebservices.com
-                  </li>
-               </ul>
+                   </li>
+                  </ul>
             </div>
             <div class="col-md-4 mb-3 mb-md-0">
                <h5 style="font-weight:700; letter-spacing:1px;">Quick Links</h5>
